--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,18 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 html {
   font-size: 10px;
   font-family: "KyoboHandwriting2020A";
 }
+body {
+  height: 100vh;
+}
 
 /* Navbar */
+nav {
+  height: 59px;
+}
 .nav-container {
   padding: 1rem 0;
   display: flex;
@@ -26,10 +31,10 @@ html {
   align-items: center;
 }
 .nav-title {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 .nav-contact {
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   border: 0;
   background: none;
   cursor: pointer;
@@ -38,7 +43,10 @@ html {
 
 /* Category */
 main {
-  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  height: calc(100% - 59px);
+  display: flex;
+  flex-direction: column;
 }
 .inner {
   padding: 0 1.5rem;
@@ -57,6 +65,13 @@ main {
 .category-item:hover {
   color: #e69a06;
   cursor: pointer;
+}
+
+/* Kakao Map */
+#map {
+  width: 100%;
+  height: 100%;
+  flex-grow: 1;
 }
 
 
